chore: se agrega mas documentacion.
