# server/swagger.yaml
@@ -4,7 +4,7 @@ apis:
 definition:
   openapi: 3.0.0
   info:
-    title: awesome-marketplace-server
+    title: awesome-marketplace-api
     version: 0.1.0
     description: Esta api alimenta de datos a la aplicación web del marketplace
     license:
@@ -17,6 +17,7 @@ definition:
   servers:
     - url: http://localhost:5001/
       description: Local server
+  paths:
   components:
     schemas:
       Price:
@@ -88,3 +89,16 @@ definition:
         properties:
           author:
             $ref: "#/components/schemas/Author"
+      HttpError:
+        description: "HTTP Error code"
+        schema: 
+          type: object
+          properties:
+            message:
+              type: string
+              description: 'Error message'
+              example: "Not Found"
+            code:
+              type: integer
+              description: "HTTP Status code"
+              example: 404
